# OpenCV_RUST_Shoes_vison

./: Cargo.toml  build.bat  roi.txt  test.drawio  test_O (1).drawio  test_ethernet.py  testcode.txt  testcode_1.txt  testcodemain.txt
gui/: Downloads - Shortcut.lnk  GUI.spec  gui.py
src/: MAIN_RS_TOM_TAT.md  main.rs  sim_server.rs
src/target_check/debug/.fingerprint/aho-corasick-07911e0e2f9a78a7/: lib-aho_corasick  lib-aho_corasick.json
src/target_check/debug/.fingerprint/autocfg-8bbb08f078756623/: lib-autocfg  lib-autocfg.json
src/target_check/debug/.fingerprint/cc-a03dd18599418f79/: lib-cc  lib-cc.json
src/target_check/debug/.fingerprint/cfg-if-ff361e238baac693/: lib-cfg_if  lib-cfg_if.json
src/target_check/debug/.fingerprint/clang-5732b0da436457f7/: lib-clang  lib-clang.json
src/target_check/debug/.fingerprint/clang-sys-530929ec49933b1c/: dep-lib-clang_sys  lib-clang_sys  lib-clang_sys.json
src/target_check/debug/.fingerprint/clang-sys-767eee6b93ca609c/: build-script-build-script-build  build-script-build-script-build.json
src/target_check/debug/.fingerprint/clang-sys-a99a2b450ab964b7/: run-build-script-build-script-build  run-build-script-build-script-build.json
src/target_check/debug/.fingerprint/dunce-966dd39d9f86a63f/: lib-dunce  lib-dunce.json
src/target_check/debug/.fingerprint/find-msvc-tools-1515f190ab9f68eb/: lib-find_msvc_tools  lib-find_msvc_tools.json
tests/: tests_vision.rs
vision_unit_test_pkg/: Cargo.toml  README.md  run_test.bat  run_test.sh
vision_unit_test_pkg/src/: main.rs
(+88 files in other folders)
